# hkipcam

./: CMakeLists.txt  README.md
cmake/: FindBonjour.cmake
src/: App.c  App.h  App_Svc_CamStreamMan.c  App_Svc_CamStreamMan.h  DB.c  DB.h  Main.c
src/cpp_wrapper/: hap.h  hap.hpp  hap_accessory.cpp  hap_accessory.hpp  hap_chars.cpp  hap_chars.hpp  hap_service.cpp  hap_service.hpp  homekit_adk.c  homekit_adk_db.c
